; ModuleID = '/home/carl/AnghaBench/radare2/libr/util/extr_buf_bytes.c_buf_bytes_fini.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/util/extr_buf_bytes.c_buf_bytes_fini.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }
%struct.buf_bytes_priv = type { i32, i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_4__*)* @buf_bytes_fini to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @buf_bytes_fini(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca %struct.buf_bytes_priv*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %4 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %5 = call %struct.buf_bytes_priv* @get_priv_bytes(%struct.TYPE_4__* %4)
  store %struct.buf_bytes_priv* %5, %struct.buf_bytes_priv** %3, align 8
  %6 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %3, align 8
  %7 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %6, i32 0, i32 1
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %15

10:                                               ; preds = %1
  %11 = load %struct.buf_bytes_priv*, %struct.buf_bytes_priv** %3, align 8
  %12 = getelementptr inbounds %struct.buf_bytes_priv, %struct.buf_bytes_priv* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 8
  %14 = call i32 @free(i32 %13)
  br label %15

15:                                               ; preds = %10, %1
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = call i32 @R_FREE(i32 %18)
  ret i32 1
}

declare dso_local %struct.buf_bytes_priv* @get_priv_bytes(%struct.TYPE_4__*) #1

declare dso_local i32 @free(i32) #1

declare dso_local i32 @R_FREE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
